2005-04-28  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/util/Collections/unmodifiableList.java:
	new test.

2005-04-28  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/JComboBox/MutableTest1.java,
	gnu/testlet/javax/swing/JComboBox/MutableTest2.java,
	gnu/testlet/javax/swing/JComboBox/SimpleSelectionTest.java:
	Cleaned up mauve tags.

2005-04-28  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/beans/Beans/instantiate_1.java,
	gnu/testlet/java/beans/Introspector/getBeanInfo.java,
	gnu/testlet/java/beans/Introspector/getBeanInfo2.java,
	gnu/testlet/java/beans/Introspector/getBeanInfo2_2.java,
	gnu/testlet/java/beans/XMLDecoder/jdk14.java:
	Cleaned up usage of mauve tags.

2005-04-28  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/util/ArrayList/subList.java,
	gnu/testlet/java/util/LinkedList/subList.java,
	gnu/testlet/java/util/Vector/subList.java:
	Added the needed Uses tags.

2005-04-28  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/table/DefaultTableModel/addColumn.java,
	gnu/testlet/javax/swing/table/DefaultTableModel/convertToVector.java,
	gnu/testlet/javax/swing/text/html/parser/ParserDelegator/Text.java:
	Added the needed Uses tags.

2005-04-28  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/table/DefaultTableColumnModel/addColumn.java,
	gnu/testlet/javax/swing/table/DefaultTableColumnModel/addColumnModelListener.java,
	gnu/testlet/javax/swing/table/DefaultTableColumnModel/getColumnModelListeners.java,
	gnu/testlet/javax/swing/table/DefaultTableColumnModel/getListeners.java,
	gnu/testlet/javax/swing/table/DefaultTableColumnModel/moveColumn.java,
	gnu/testlet/javax/swing/table/DefaultTableColumnModel/setColumnMargin.java:
	Added needed Uses tags.

2005-04-25  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/BufferedReader/mark.java: New test.

2005-04-24  David Gilbert  <david.gilbert@object-refinery.com>
